product details name and image

--- a/public/views/product-details.html
+++ b/public/views/product-details.html
@@ -9,7 +9,7 @@
                 <div class="product-details"><!--product-details-->
                     <div class="col-sm-5">
                         <div class="view-product">
-                            <img src="images/product-details/1.jpg" alt="" />
+                            <img src="/uploads/products/{{ product.id }}/{{ product.images[0].image }}" alt="{{ product.name }}" />
                             <h3>ZOOM</h3>
                         </div>
                         <div id="similar-product" class="carousel slide" data-ride="carousel">
@@ -47,11 +47,11 @@
                     <div class="col-sm-7">
                         <div class="product-information"><!--/product-information-->
                             <img src="images/product-details/new.jpg" class="newarrival" alt="" />
-                            <h2>Anne Klein Sleeveless Colorblock Scuba</h2>
-                            <p>Web ID: 1089772</p>
+                            <h2>{{ product.name }}</h2>
+                            <p>SKU: {{ product.sku }}</p>
                             <img src="images/product-details/rating.png" alt="" />
 								<span>
-									<span>US $59</span>
+									<span>US {{ product.price }}</span>
 									<label>Quantity:</label>
 									<input type="text" value="3" />
 									<button type="button" class="btn btn-fefault cart">
@@ -59,9 +59,10 @@
                                         Add to cart
                                     </button>
 								</span>
-                            <p><b>Availability:</b> In Stock</p>
-                            <p><b>Condition:</b> New</p>
-                            <p><b>Brand:</b> E-SHOPPER</p>
+                            <p data-ng-if="product.availability != 'out_of_stock'"><b>Availability:</b> {{ product.availability }}</p>
+                            <p data-ng-if="product.availability == 'out_of_stock'"><b>Availability:</b> Out of stock</p>
+                            <p><b>Condition:</b> {{ product.condition }}</p>
+                            <p><b>Brand:</b> {{ product.brand_name }}</p>
                             <a href=""><img src="images/product-details/share.png" class="share img-responsive"  alt="" /></a>
                         </div><!--/product-information-->
                     </div>
