Change store image path of product.

--- a/public/css/customize.css
+++ b/public/css/customize.css
@@ -35,3 +35,11 @@
 .row-img img {
     max-height: 100px;
 }
+
+.content-header h1 {
+    font-size: 16px !important;
+}
+
+.content-header small {
+    font-size: 13px !important;
+}
