--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1427,7 +1427,7 @@ h2.title {
 #form {
   display: block;
   margin-bottom: 185px;
-  margin-top: 185px;
+  /*margin-top: 185px;*/
   overflow: hidden;
 }
 
