--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
 .error-message {
- color: #FE980F;
+ color: #28ABE3;
 }
 .btn-default[disabled] {
-    background-color: #FE980F !important;
+    background-color: #28ABE3 !important;
 }
 .carousel {
     margin-top: 20px;
@@ -22,4 +22,218 @@
 .carousel-inner .item img {
     max-width: none !important;
     max-height: none !important;
+}
+
+/*new color*/
+.cart, .searchform button {
+    background: #28ABE3 !important;
+}
+.product-information span span, .left-sidebar h2, .brands_products h2, h2.title, .productinfo h2 {
+    color: #28ABE3 !important;
+}
+.recommended-item-control i {
+    background: none repeat scroll 0 0 #28ABE3 !important;
+}
+.mainmenu ul li a:hover, .mainmenu ul li a.active, .shop-menu ul li a.active {
+    color: #6c9edf !important;
+}
+.nav-tabs li.active a, .nav-tabs li.active a:hover, .nav-tabs li.active a:focus {
+    background-color: #28ABE3 !important;
+}
+.category-tab ul {
+    border-bottom: 1px solid #28ABE3 !important;
+}
+.carousel-indicators li.active {
+    background: #28ABE3 !important;
+}
+.item h1 span {
+    color: #28ABE3 !important;
+}
+.item button:hover {
+    background: #28ABE3 !important;
+}
+.get {
+    background: #28ABE3 !important;
+}
+.control-carousel:hover {
+    color: #28ABE3 !important;
+}
+.left-sidebar h2, .brands_products h2 {
+    color: #28ABE3 !important;
+}
+.tooltip-inner {
+    background-color: #28ABE3 !important;
+}
+.tooltip.top .tooltip-arrow {
+    border-top-color: #28ABE3 !important;
+}
+.product-overlay {
+    background: #28ABE3 !important;
+}
+.product-overlay .add-to-cart {
+    color: #28ABE3 !important;
+}
+.product-overlay .add-to-cart:hover {
+    color: #28ABE3 !important;
+}
+.add-to-cart:hover {
+    background: #28ABE3 !important;
+    border: 0 none;
+    border-radius: 0;
+    color: #FFFFFF;
+}
+.choose ul li a:hover {
+    color: #28ABE3 !important;
+}
+.category-tab ul {
+    border-bottom: 1px solid #28ABE3 !important;
+}
+.category-tab ul li a:hover {
+    background: #28ABE3 !important;
+    color: #fff;
+}
+.pagination .active a, .pagination .active span, .pagination .active a:hover, .pagination .active span:hover, .pagination .active a:focus, .pagination .active span:focus {
+    background-color: #28ABE3 !important;
+    border-color: #28ABE3 !important;
+}
+.pagination li a:hover {
+    background: #28ABE3 !important;
+    color: #fff;
+}
+.view-product h3 {
+    background: #28ABE3 !important;
+}
+.item-control i {
+    background: #28ABE3 !important;
+}
+#reviews ul li a i {
+    color: #28ABE3 !important;
+    padding-right: 8px;
+}
+
+#reviews ul li a:hover {
+    background: #fff;
+    color: #28ABE3 !important;
+}
+#reviews button {
+    background: #28ABE3 !important;
+}
+.content-404 h2 a {
+    background: #28ABE3 !important;
+}
+.login-form form button, .signup-form form button {
+    background: #28ABE3 !important;
+}
+.or {
+    background: #28ABE3 !important;
+}
+.breadcrumbs .breadcrumb li a {
+    background: #28ABE3 !important;
+}
+.breadcrumbs .breadcrumb li a:after {
+    border-color: transparent transparent transparent #28ABE3 !important;
+}
+#cart_items .cart_info .cart_menu {
+    background: #28ABE3 !important;
+}
+#cart_items .cart_info .cart_total_price {
+    color: #28ABE3 !important;
+}
+.cart_delete a:hover {
+    background: #28ABE3 !important
+}
+.update, .check_out {
+    background: #28ABE3 !important;
+}
+.checkout-options .nav li a {
+    color: #28ABE3 !important;
+}
+.checkout-options .nav i {
+    background: #28ABE3 !important;
+}
+.shopper-info .btn-primary {
+    background: #28ABE3 !important;
+}
+#cart_items .cart_info
+.table.table-condensed.total-result span {
+    color: #28ABE3 !important;
+}
+.blog-post-area
+.post-meta ul li i {
+    background: #28ABE3 !important;
+}
+.sinlge-post-meta li i:after,
+.blog-post-area
+.post-meta ul li i:after {
+    border-color: transparent transparent transparent #28ABE3 !important;
+}
+.blog-post-area
+.post-meta ul span {
+    color: #28ABE3 !important
+}
+.post-meta span i {
+    color: #28ABE3 !important
+}
+.blog-post-area
+.single-blog-post
+.btn-primary {
+    background: #28ABE3 !important;
+}
+.pagination-area
+.pagination li a:hover,
+.pagination-area
+.pagination li .active {
+    background: #28ABE3 !important;
+}
+.pager-area
+.pager li a:hover {
+    background: #28ABE3 !important;
+}
+.rating-area
+.ratings .color,
+.rating-area .color {
+    color: #28ABE3 !important
+}
+.blog-socials ul li a:hover {
+    background: #28ABE3 !important
+}
+.sinlge-post-meta li i {
+    background: #28ABE3 !important;
+}
+.media-list .btn-primary,
+.commnets .btn-primary {
+    background: #34b0e5;
+}
+.replay-box label {
+    background: #28ABE3 !important;
+}
+.replay-box span {
+    color: #28ABE3 !important;
+}
+.replay-box form input:hover,
+.text-area textarea:hover {
+    border: 1px solid #28ABE3 !important;
+}
+.btn.btn-primary {
+    background: #28ABE3 !important;
+}
+.blank-arrow label:after {
+    border-color: #28ABE3 !important transparent transparent transparent;
+}
+#contact-page .form-control:focus,
+#contact-page .form-control:hover {
+    box-shadow: inherit;
+    border-color: #78caed;
+}
+.contact-info .social-networks ul li a:hover {
+    color: #28ABE3 !important;
+}
+.shop-menu ul li a:hover {
+    color: #28ABE3 !important;
+}
+a#scrollUp {
+    background: #28ABE3 !important;
+}
+.slider-selection {
+    background: none repeat scroll 0 0 #28ABE3 !important;
 }
