style cart quantity

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -247,3 +247,14 @@ a#scrollUp {
     padding-top: 20px;
     padding-left: 20px;
 }
+.circle {
+    width: 20px;
+    height: 20px;
+    background: #FE980F;
+    color: #ffffff;
+    display: inline-block;
+    text-align: center;
+    -moz-border-radius: 70px;
+    -webkit-border-radius: 70px;
+    border-radius: 70px;
+}
