--- a/public/css/style.css
+++ b/public/css/style.css
@@ -300,3 +300,9 @@ a#scrollUp {
     background: none;
     color: #28ABE3 !important;
 }
+.forgot-link {
+    padding: 10px 0;
+}
+.signup-form form button, .login-form form button {
+    margin-top: 20px !important;
+}
