--- a/public/css/style.css
+++ b/public/css/style.css
@@ -129,7 +129,7 @@
     background: #28ABE3 !important;
 }
 .breadcrumbs .breadcrumb li a:after {
-    border-color: transparent transparent transparent #28ABE3 !important;
+    /*border-color: transparent transparent transparent #28ABE3 !important;*/
     margin-left: 35px !important;
 }
 #cart_items .cart_info .cart_menu {
