--- a/public/css/style.css
+++ b/public/css/style.css
@@ -125,13 +125,13 @@
 .or {
     background: #28ABE3 !important;
 }
-.breadcrumbs .breadcrumb li a {
+/*.breadcrumbs .breadcrumb li a {
     background: #28ABE3 !important;
 }
 .breadcrumbs .breadcrumb li a:after {
-    /*border-color: transparent transparent transparent #28ABE3 !important;*/
+    *//*border-color: transparent transparent transparent #28ABE3 !important;*//*
     margin-left: 35px !important;
-}
+}*/
 #cart_items .cart_info .cart_menu {
     background: #28ABE3 !important;
 }
@@ -342,3 +342,11 @@ a#scrollUp {
 .no-padding {
     padding: 0px !important;
 }
+
+/** Breadcrumb */
+.breadcrumb {background: rgba(245, 245, 245, 1); border: 0px solid rgba(245, 245, 245, 1); border-radius: 5px; display: block;}
+.breadcrumb li {font-size: 14px;}
+.breadcrumb a {color: rgba(66, 139, 202, 1);}
+.breadcrumb a:hover {color: rgba(42, 100, 150, 1);}
+.breadcrumb>.active {color: rgba(153, 153, 153, 1);}
+.breadcrumb>li+li:before {color: rgba(204, 204, 204, 1); content: "\276D\00a0";}
