--- a/public/css/style.css
+++ b/public/css/style.css
@@ -494,3 +494,27 @@ a.active {
 .cancel-update-account, .save-update-account {
     display: none;
 }
+#account-sidebar li a {
+    padding: 6px 15px 6px 0;
+    background: #FFFFFF;
+    color: #696763;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+}
+#account-sidebar li a:hover {
+    color: #28ABE3;
+}
+.account-content {
+    background: #fff;
+    border: 1px solid #f5f5f5;
+    color: #222;
+    min-height: 460px;
+    padding: 45px 46px;
+}
+.account-order .btn {
+    margin-top: 0 !important;
+}
+.account-order .btn:hover {
+    background: #14759e !important;
+}
